@@ -4,6 +4,10 @@ Changes in version 0.4.7
 - Added janaroot plugin for automatic generation of ROOT trees from object
 - Create symbolic link to src directory if no "src" dir/file exists in the
   installation directory
+- Fixed event rate reported so events read into buffer, but not yet processed
+  aren't included
+- Cleaned up base JANA Usage statement and implemented in the jana utility
+- Added --config option to read in configuration parameters from a file
 
 Changes in version 0.4.6
 
